# boost-guard

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  package.json  spec.yaml
.github/workflows/: ci.yml
api/: spec.yaml
src/: create_voucher.rs  guard.ts  index.ts  job.ts  lib.rs  lottery.rs  main.rs  routes.rs  rpc.ts  signatures.rs  tokens.rs  utils.ts
src/graphql/: boost.ts  boost_query.graphql  boosts.ts  every_vote_query.graphql  index.ts  proposal_query.graphql  schema.gql  schema.graphql  schema.ts  status.ts  subgraph_schema.json  vote_query.graphql  whale_votes_query.graphql
src/guard/: index.ts  strategy.json  types.ts
src/strategies/: index.ts  schema.json  snapshot.ts  strategy.ts
src/strategies/snapshot/: index.ts  schema.json
test/: index.test.ts
test/__snapshots__/: index.test.ts.snap
