[package]
name = "boost-guard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
mime = "0.3.17"
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1.0"}
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace"] }
hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "http1", "client-legacy"] }
http-body-util = "0.1.0"
reqwest = {version ="0.11.22", features = ["json"]}
graphql_client = "0.13.0"
ethers = { version = "2.0.11", features = ["eip712"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
cached = { version = "0.48.1", features = ["proc_macro", "async"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
durations = "0.1.1"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
